--- a/public/bday.html
+++ b/public/bday.html
@@ -1,5 +1,5 @@
 <h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
+<h2>On the 2nd May</h2>
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Happy Birthday Image" />
 
 <h3>What to Bring:</h3>
